# OMI-Model-Standards

./: pyproject.toml
src/omi_model_standards/convert/lora/: convert_clip.py  convert_flux_lora.py  convert_hidream_lora.py  convert_hunyuan_video_lora.py  convert_llama.py  convert_lora_util.py  convert_pixart_lora.py  convert_sd3_lora.py  convert_sd_lora.py  convert_sdxl_lora.py  convert_stable_cascade_lora.py  convert_t5.py
src/omi_model_standards/model_spec/: architecture.py
