[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "omi_model_standards"
dynamic = ["version"]
authors = []
description = "OMI model standards and conversion library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache License",
]
dependencies = [
    'torch>=2.0.0',
]

[project.urls]
Homepage = "https://github.com/Open-Model-Initiative/OMI-Model-Standards"
Issues = "https://github.com/Open-Model-Initiative/OMI-Model-Standards/issues"

[tool.setuptools_scm]
